--- a/todo-app/frontend - redux/public/index.html
+++ b/todo-app/frontend - redux/public/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head>  
         <meta charset='utf-8'>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
-        <title> Todo App </title>
+        <title>Todo App</title>
         <link rel='stylesheet' href='app.css'>
     </head>
     <body>
-
-        <div id='app' class='container'></div>
+        <div id="app" class='container'></div>
         <script src='app.js'></script>
     </body>
 </html>
